--- a/src/App.css
+++ b/src/App.css
@@ -34,10 +34,24 @@ nav ul li a{
   align-items: center;
   background-color:rgb(235, 231, 229);
   font-size: large;
-  text-align-last: center;;
+  text-align-last: center;
+  
   
 }
+ 
+.cardsProduct{
+  
+  display:inline-block;
+  background-color: rgb(235, 231, 229);
+  text-align: center;
+  margin-left: 90px;
 
-div h2{
-  align-items: center;
+}
+
+.cardsProduct img{
+  width:250px; 
+    height:400px; 
+    margin: 20px;
+    margin-left: 10px;
+    justify-content: center;
 }
